@@ -100,7 +100,20 @@ public class OsgiServiceRegistrationListenerAdapter implements OsgiServiceRegist
 				log.debug(clazz.getName() + " is a registration listener");
 
 		registrationMethods = CustomListenerAdapterUtils.determineCustomMethods(clazz, registrationMethod);
+
+		if (StringUtils.hasText(registrationMethod) && registrationMethods.isEmpty()) {
+			String beanName = (target == null ? "" : " bean [" + targetBeanName + "] ;");
+			throw new IllegalArgumentException("Custom registration method [" + registrationMethod
+					+ "] (with proper signature) not found on " + beanName + "class " + clazz);
+		}
+
 		unregistrationMethods = CustomListenerAdapterUtils.determineCustomMethods(clazz, unregistrationMethod);
+
+		if (StringUtils.hasText(unregistrationMethod) && unregistrationMethods.isEmpty()) {
+			String beanName = (target == null ? "" : " bean [" + targetBeanName + "] ;");
+			throw new IllegalArgumentException("Custom unregistration method [" + unregistrationMethod
+					+ "] (with proper signature) not found on " + beanName + "class " + clazz);
+		}
 
 		if (!isListener && (registrationMethods.isEmpty() && unregistrationMethods.isEmpty()))
 			throw new IllegalArgumentException("target object needs to implement "
