@@ -5,8 +5,9 @@ http://www.springframework.org/osgi
 Changes in version 1.2.0 final (2009-03-xx)
 -------------------------------------------
 
-Package org.springframework.osgi.service.importer.support
+Package org.springframework.osgi.service
 * fixed conversion of ServiceReferences in ServiceReferenceEditor
+* improved error reporting for importer and exporter listeners configured with non-existing or incorrect custom methods
 
 
 Changes in version 1.2.0 RC1 (2009-03-09)
